	not be executed (no branches taken).  Thanks to Ed Pavlov.

	Changed default value of 'findprg' to avoid the use of syntax specific to
	GNU find.  The only difference is that now one can see "Permission denied"
	errors which weren't displayed before.  Sample vifmrc files contain
	detection of GNU find on startup.  Thanks to Jose Riha (a.k.a. jose1711).

	Added command-line history to menu mode.

	Added "mchistory" value to 'vifminfo' and 'sessionoptions' option.  It
	manages storing of command-line history of menus.

	Added ":history mcmd" menu for displaying command-line history of menus.

	Added :col[der] and :cnew[er] commands to menu mode to traverse history of
	navigation menus.

	Added :chi[story] command that opens a menu of saved menus.

	Added :chi[story] command to menu mode.

	Added 'hloptions' option to configure which columns get colored.  Thanks to
	qsmodo.

	Added "column:{name}" form of argument to :highlight command to specify
	style of a separate column.  Thanks to Anton Gepting.

	Added "millersep:" value to 'fillchars' that allows customizing the border
	between miller columns.  Thanks to Shuo (a.k.a. shenqshuoh).

	Added :gr[ep] command to menu mode.  Allows (re)running grep command
	on the same set of files without leaving the mode.

	Added :fin[d] command to menu mode.  Allows (re)running find command
	on the same set of files without leaving the mode.

	Added middle view column alignment (specified by "^" in 'viewcolumns'
	option).  Part of the text is replaced with ellipsis to keep both start
	and end visible.  Patch by Vadim Curcă.

	Added escape() builtin function to escape specific characters in strings.
	Thanks to The Cyberduck.

	Added :wingo command to navigate to a view by substring matching against
	its title or path.  Thanks to iSeeU816 and Alexandre Viau.

	Added :cal[l] command to run a function discarding its return value.
	Thanks to anyone asking about simply running a function.
